// Copyright (c) 2023 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.admin.domain.v0;

import "google/protobuf/wrappers.proto";

message SequencerConnection {
  oneof type {
    Grpc grpc = 2;
  }

  string alias = 3;

  message Grpc {
    // connection information to sequencer (http[s]://<host>:<port>")
    repeated string connections = 1;
    // Should the connection use TLS?
    bool transportSecurity = 2;
    google.protobuf.BytesValue customTrustCertificates = 3;
  }
}
