// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.admin.participant.v30;

import "com/digitalasset/canton/admin/time/v30/time_tracker_config.proto";
import "com/digitalasset/canton/admin/domain/v30/sequencer_connection.proto";
import "google/protobuf/duration.proto";

/**
 * Domain connectivity service for adding and connecting to domains
 *
 * The domain connectivity service allows to register to new domains and control the
 * participants domain connections.
 */
service DomainConnectivityService {
  // Connect to a new domain
  rpc ConnectDomain(ConnectDomainRequest) returns (ConnectDomainResponse);
  // Register the configuration of a new domain connection
  rpc RegisterDomain(RegisterDomainRequest) returns (RegisterDomainResponse);

  // Reconnect to registered domains
  rpc ReconnectDomains(ReconnectDomainsRequest) returns (ReconnectDomainsResponse);
  // Reconnect to a registered domain
  rpc ReconnectDomain(ReconnectDomainRequest) returns (ReconnectDomainResponse);

  // Reconfigure a domain connection
  rpc ModifyDomain(ModifyDomainRequest) returns (ModifyDomainResponse);

  // Disconnect from a connected domain
  rpc DisconnectDomain(DisconnectDomainRequest) returns (DisconnectDomainResponse);
  // Disconnect from all connected domains
  rpc DisconnectAllDomains(DisconnectAllDomainsRequest) returns (DisconnectAllDomainsResponse);

  // Revoke the authentication tokens for all the sequencers on a domain and disconnect the sequencer clients
  rpc Logout(LogoutRequest) returns (LogoutResponse);

  // list connected domains
  rpc ListConnectedDomains(ListConnectedDomainsRequest) returns (ListConnectedDomainsResponse);
  // list registered domains
  rpc ListRegisteredDomains(ListRegisteredDomainsRequest) returns (ListRegisteredDomainsResponse);

  // Get the domain id of the given domain alias
  rpc GetDomainId(GetDomainIdRequest) returns (GetDomainIdResponse);
}

message DomainConnectionConfig {
  // participant local identifier of the target domain
  string domain_alias = 1;
  // connection information to sequencers
  com.digitalasset.canton.admin.domain.v30.SequencerConnections sequencer_connections = 2;
  // if false, then domain needs to be manually connected to (default false)
  bool manual_connect = 3;
  // optional domainId (if TLS isn't to be trusted)
  string domain_id = 4;
  // optional. Influences whether the participant submits to this domain, if several domains are eligible
  int32 priority = 5;
  // initial delay before an attempt to reconnect to the sequencer
  google.protobuf.Duration initial_retry_delay = 6;
  // maximum delay before an attempt to reconnect to the sequencer
  google.protobuf.Duration max_retry_delay = 7;
  // configuration for how time is tracked and requested on this domain
  com.digitalasset.canton.admin.time.v30.DomainTimeTrackerConfig time_tracker = 8;
  // If true, allows a participant to connect to a domain that it was previously connected to,
  // without issuing a new domain trust certificate.
  bool initialize_from_trusted_domain = 10;
}

message ReconnectDomainsRequest {
  /* if set to true, the connection attempt will succeed even if one of the connection attempts failed */
  bool ignore_failures = 1;
}
message ReconnectDomainsResponse {}

/** Register connection configuration of a new domain */
message RegisterDomainRequest {
  enum DomainConnection {
    DOMAIN_CONNECTION_MISSING = 0;

    // No connection, only registering configuration
    DOMAIN_CONNECTION_NONE = 1;

    // Only performs the handshake with the sequencer (including fetching and persisting the static
    // domain parameters) but does not establish an active connection to the domain.
    // In that case domain connection will need to be performed subsequently.
    // This is useful during major version upgrades where we need to locally initialize the domain
    // connection, but don't want to start processing contracts before we have imported the ACS.
    DOMAIN_CONNECTION_HANDSHAKE = 2;
  }

  DomainConnectionConfig config = 1;

  // Whether requests to the domain are made
  DomainConnection domain_connection = 2;

  // Determines how well the provided sequencer connections should be validated before they are
  // persisted. The more paranoid the validation, the higher the chance of the command failing,
  // as it will require the sequencer to be online and responsive.
  com.digitalasset.canton.admin.domain.v30.SequencerConnectionValidation sequencer_connection_validation = 3;
}

message RegisterDomainResponse {}

message ModifyDomainRequest {
  DomainConnectionConfig new_config = 1;
  com.digitalasset.canton.admin.domain.v30.SequencerConnectionValidation sequencer_connection_validation = 2;
}

message ModifyDomainResponse {}

message ListRegisteredDomainsRequest {}

message ListRegisteredDomainsResponse {
  message Result {
    DomainConnectionConfig config = 1;
    bool connected = 2;
  }
  repeated Result results = 1;
}

message ReconnectDomainRequest {
  string domain_alias = 1;
  /* if retry is set to true, we will keep on retrying if the domain is unavailable */
  bool retry = 2;
}

message ReconnectDomainResponse {
  /* true if the domain is connected, false if the domain is offline, exception on any other error */
  bool connected_successfully = 1;
}

message ConnectDomainRequest {
  DomainConnectionConfig config = 1;

  // Determines how well the provided sequencer connections should be validated before they are
  // persisted. The more paranoid the validation, the higher the chance of the command failing,
  // as it will require the sequencer to be online and responsive.
  com.digitalasset.canton.admin.domain.v30.SequencerConnectionValidation sequencer_connection_validation = 2;
}

message ConnectDomainResponse {
  /* true if the domain is connected, false if the domain is offline, exception on any other error */
  bool connected_successfully = 1;
}

message DisconnectDomainRequest {
  string domain_alias = 1;
}

message DisconnectDomainResponse {}

message DisconnectAllDomainsRequest {}

message DisconnectAllDomainsResponse {}

message ListConnectedDomainsRequest {}

message ListConnectedDomainsResponse {
  message Result {
    string domain_alias = 1;
    string domain_id = 2;
    bool healthy = 3;
  }
  repeated Result connected_domains = 1;
}

message GetDomainIdRequest {
  string domain_alias = 1;
}

message GetDomainIdResponse {
  string domain_id = 2;
}

message LogoutRequest {
  string domain_alias = 1;
}

message LogoutResponse {
}
